# Buzzer

./: Buzzer.cabal  HS-UNIT-TEST.cabal  README.md
app/: Buzzer.hs  Main.hs  Tests.hs
